--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "@vercel/postgres": "^0.7.2",
+    "axios": "^1.6.7",
     "chart": "^0.1.2",
     "chart.js": "^4.4.1",
     "docker-compose": "^0.24.3",
