--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css,scss}'"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@prisma/client": "^5.8.1",
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.6.7",
