--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@prisma/client": "^5.8.1",
+    "@slack/webhook": "^7.0.2",
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.6.7",
     "chart": "^0.1.2",
